# quickcontroller

./: .env.example  .gitignore  CLAUDE.md  dev.md  docker-compose.yml  notes.md  prompt.md
.claude/agents/: full-stack-engineer.md  testing-engineer.md
backend/: Dockerfile  main.py  pyproject.toml
backend/api/v1/: apps.py  auth.py  controllers.py  schemas.py
backend/apps/: connection_manager.py  discovery.py  ha_client.py
backend/apps/command_center/: __init__.py  app.py
backend/apps/command_center/migrations/: 001_cc_audit_logs.sql
backend/apps/command_center/routes/: __init__.py  audit.py  controllers.py  system.py  users.py
backend/apps/framework/: __init__.py  base.py  permissions.py  registry.py  test_framework.py
backend/core/: config.py  deps.py  encryption.py  security.py
backend/db/: postgres.py  redis.py
backend/migrations/: 001_users.sql  002_master_controllers.sql  003_app_permissions.sql  runner.py
backend/quickcontroller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AddControllerModal.vue  EntityCard.vue
frontend/src/layouts/: AuthLayout.vue
frontend/src/router/: index.js
frontend/src/styles/: _base.scss  _mixins.scss  _variables.scss
frontend/src/views/: ControllersView.vue  DashboardView.vue  DevicesView.vue  LoginView.vue  RegisterView.vue
scripts/: run-tests.sh
tests/e2e/: Dockerfile  package.json  playwright.config.js
tests/e2e/reports/: index.html
tests/e2e/specs/: auth.spec.js
(+16 files in other folders)
